--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: 87a972320edb5de34c7f0f90a6305f2b62241ff7f6679781437cae6433134406
 
 build:
-  number: 1
+  number: 2
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
 
@@ -20,12 +20,12 @@ requirements:
     - python >=3.5
   run:
     - python >=3.5
-    - ipywidgets ==7.6.3
-    - pyiron_base ==0.2.11
-    - pyiron_atomistics ==0.2.11
-    - numpy ==1.20.2
-    - pandas ==1.2.4
-    - matplotlib-base ==3.4.2
+    - ipywidgets >=7.6.3
+    - pyiron_base >=0.2.11
+    - pyiron_atomistics >=0.2.11
+    - numpy >=1.20.2
+    - pandas >=1.2.4
+    - matplotlib-base >=3.4.2
 
 test:
   imports:
