--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "pyiron_gui" %}
-{% set version = "0.0.3" %}
+{% set version = "0.0.4" %}
 
 package:
   name: {{ name|lower }}
@@ -7,10 +7,10 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/pyiron_gui-{{ version }}.tar.gz
-  sha256: 87a972320edb5de34c7f0f90a6305f2b62241ff7f6679781437cae6433134406
+  sha256: 0d5b071e0ee161e69bf8df574d76ed40fde7a28c01bb2449786d6b73c7786fee
 
 build:
-  number: 1
+  number: 0
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
 
@@ -20,12 +20,12 @@ requirements:
     - python >=3.5
   run:
     - python >=3.5
-    - ipywidgets ==7.6.3
-    - pyiron_base ==0.2.11
-    - pyiron_atomistics ==0.2.11
-    - numpy ==1.20.2
-    - pandas ==1.2.4
-    - matplotlib-base ==3.4.2
+    - ipywidgets >=7.6.3
+    - pyiron_base >=0.2.17
+    - pyiron_atomistics >=0.2.17
+    - numpy >=1.20.3
+    - pandas >=1.2.4
+    - matplotlib-base >=3.4.2
 
 test:
   imports:
