--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,24 +10,24 @@ source:
   sha256: eece5e6245aa2cbc4efb49b2c1e5c50755c173d7579852993fb2e0f038960f49
 
 build:
-  number: 0
   noarch: python
-  script: {{ PYTHON }} -m pip install . -vv
+  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
+  number: 0
 
 requirements:
   host:
-    - pip
     - python >=3.5
+    - pip
   run:
     - python >=3.5
-    - ipywidgets >=8.0.6
     - pyiron_base >=0.5.35
     - pyiron_atomistics >=0.2.65
-    - numpy >=1.23.4
-    - pandas >=1.5.1
+    - ipywidgets >=8.0.6
     - matplotlib-base >=3.7.1
     - nbconvert >=7.3.1
     - nbformat >=5.8.0
+    - numpy >=1.24.2
+    - pandas >=2.0.0
 
 test:
   imports:
@@ -39,14 +39,9 @@ test:
 
 about:
   home: https://github.com/pyiron/pyiron_gui
+  summary: Repository for GUI plugins to the pyiron IDE.
   license: BSD-3-Clause
-  license_family: BSD
   license_file: LICENSE
-  summary: Extended graphical user interface (GUI) for pyiron the integrated development environment (IDE)
-  description: |
-    extended graphical user interface (GUI) for pyiron the integrated development environment (IDE)
-  doc_url: https://github.com/pyiron/pyiron_gui
-  dev_url: https://github.com/pyiron/pyiron_gui
 
 extra:
   recipe-maintainers:
