--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
 build:
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
-  number: 0
+  number: 1
 
 requirements:
   host:
@@ -49,4 +49,4 @@ extra:
     - pyiron-runner
     - jan-janssen
     - pmrv
-    - niklasiemer
+    - niklassiemer
